// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignsUserMarketingPage renders for disabled 1`] = `
Array [
  <section
    className="mt-3 mb-5"
  >
    <h1
      className="font-weight-bold display-4"
    >
      Campaigns 
      <span
        className="badge badge-info badge-outline"
      >
        Beta
      </span>
    </h1>
    <p
      className="lead"
    >
      <em>
        Campaigns are currently in beta: during the beta period Campaigns are free to use, after the beta period Campaigns will be a paid add-on. Please 
        <a
          href="mailto:sales@sourcegraph.com"
        >
          contact us
        </a>
         
        for more information.
      </em>
    </p>
    <h2
      className="mb-6"
    >
      Make large-scale code changes across all your repositories and code hosts.
    </h2>
    <p
      className="mt-3"
    >
      <a
        href="https://about.sourcegraph.com/product/code-change-management"
        rel="noopener"
      >
        Learn how
      </a>
       
      campaigns can help you remove legacy code, fix critical security issues, and pay down tech debt. See it in action to run 
      <code>
        gofmt
      </code>
       over all Go repositories:
    </p>
    <div
      className="position-relative campaign-marketing--video-wrapper"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowFullScreen={true}
        className="w-100 h-100 position-absolute campaign-marketing--video-frame"
        frameBorder="0"
        src="https://player.vimeo.com/video/398878670?autoplay=0&title=0&byline=0&portrait=0"
      />
    </div>
  </section>,
  <section
    className="my-3"
  >
    <h2>
      Interested in Campaigns?
    </h2>
    <p>
      At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
    </p>
    <div
      className="row"
    >
      <ol>
        <li>
          Let your Sourcegraph admin know you're interested in using Campaigns for your team.
        </li>
        <li>
          Learn how to
           
          <a
            href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
          >
            get started creating campaigns
          </a>
          .
        </li>
      </ol>
    </div>
    <a
      className="btn btn-primary"
      href="https://docs.sourcegraph.com/user/campaigns"
      rel="noopener"
    >
      Learn how to get started
    </a>
  </section>,
  <section
    className="py-5"
  >
    <h2>
      Share your feedback
    </h2>
    <p>
      Get in touch on Twitter 
      <a
        href="https://twitter.com/srcgraph"
      >
        @srcgraph
      </a>
      , file an issue in our
       
      <a
        href="https://github.com/sourcegraph/sourcegraph/issues"
      >
        public issue tracker
      </a>
      , or email
       
      <a
        href="mailto:feedback@sourcegraph.com"
      >
        feedback@sourcegraph.com
      </a>
       to share your feedback and use cases. We look forward to hearing from you!
    </p>
  </section>,
]
`;

exports[`CampaignsUserMarketingPage renders for enabled 1`] = `
Array [
  <section
    className="mt-3 mb-5"
  >
    <h1
      className="font-weight-bold display-4"
    >
      Campaigns 
      <span
        className="badge badge-info badge-outline"
      >
        Beta
      </span>
    </h1>
    <p
      className="lead"
    >
      <em>
        Campaigns are currently in beta: during the beta period Campaigns are free to use, after the beta period Campaigns will be a paid add-on. Please 
        <a
          href="mailto:sales@sourcegraph.com"
        >
          contact us
        </a>
         
        for more information.
      </em>
    </p>
    <h2
      className="mb-6"
    >
      Make large-scale code changes across all your repositories and code hosts.
    </h2>
    <p
      className="mt-3"
    >
      <a
        href="https://about.sourcegraph.com/product/code-change-management"
        rel="noopener"
      >
        Learn how
      </a>
       
      campaigns can help you remove legacy code, fix critical security issues, and pay down tech debt. See it in action to run 
      <code>
        gofmt
      </code>
       over all Go repositories:
    </p>
    <div
      className="position-relative campaign-marketing--video-wrapper"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowFullScreen={true}
        className="w-100 h-100 position-absolute campaign-marketing--video-frame"
        frameBorder="0"
        src="https://player.vimeo.com/video/398878670?autoplay=0&title=0&byline=0&portrait=0"
      />
    </div>
  </section>,
  <section
    className="my-3"
  >
    <h2>
      Interested in Campaigns?
    </h2>
    <p>
      At this time, creating and managing campaigns is only available to Sourcegraph admins. What can you do?
    </p>
    <div
      className="row"
    >
      <ol>
        <li>
          Let your Sourcegraph admin know you're interested in using Campaigns for your team.
        </li>
        <li>
          Ask your Sourcegraph admin for
           
          <a
            href="https://docs.sourcegraph.com/user/campaigns"
            rel="noopener"
          >
            read-only access
          </a>
           
          to Campaigns.
          <div
            className="alert alert-info mt-3"
          >
            <b>
              NOTE:
            </b>
             Repository permissions are NOT enforced by campaigns, so your admin may not grant read-only access if your Sourcegraph instance has repository permissions configured.
          </div>
        </li>
        <li>
          Learn how to
           
          <a
            href="https://docs.sourcegraph.com/user/campaigns#creating-campaigns"
          >
            get started creating campaigns
          </a>
          .
        </li>
      </ol>
    </div>
    <a
      className="btn btn-primary"
      href="https://docs.sourcegraph.com/user/campaigns"
      rel="noopener"
    >
      Learn how to get started
    </a>
  </section>,
  <section
    className="py-5"
  >
    <h2>
      Share your feedback
    </h2>
    <p>
      Get in touch on Twitter 
      <a
        href="https://twitter.com/srcgraph"
      >
        @srcgraph
      </a>
      , file an issue in our
       
      <a
        href="https://github.com/sourcegraph/sourcegraph/issues"
      >
        public issue tracker
      </a>
      , or email
       
      <a
        href="mailto:feedback@sourcegraph.com"
      >
        feedback@sourcegraph.com
      </a>
       to share your feedback and use cases. We look forward to hearing from you!
    </p>
  </section>,
]
`;
